# de_ti

./: README.md  pyproject.toml
data/raw/: data_gouv.csv
data/transformed/: data_gouv.csv
notebooks/: 01_road_and_validate_raw_data.ipynb  02_explore_data.ipynb  03_adresse_data_gouv.ipynb  04_geopy.ipynb
src/: path.py
