[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["enekoegiguren <116632843+enekoegiguren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
requests = "^2.31.0"
matplotlib = "^3.8.3"
pyarrow = "^15.0.1"
fastparquet = "^2024.2.0"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
